# takit---lightweight-video-and-audio-downloader-

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bins.rs  download.rs  lib.rs  main.rs  settings.rs
tools/: make_icons.py
